# c-bpe

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  profile_breakdown.py  profile_compare.py  profile_medium.py  profile_percall.py  profile_scaling.py  pyproject.toml  pyrightconfig.json  setup.py  test_quick.py
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  workflow.yml
benchmark/: bench_results.md  benchmark.py  c_bpe_benchmark.py  run_c_bpe_bench.py
c_bpe/: bench_hash.c  pyproject.toml  setup.py
c_bpe/codegen/: README_codegen.md  fetch_pcre2.py  gen_precomputed.py
c_bpe/include/: ac_bpe.h  appendable_encoder.h  bitfield.h  bpe.h  fnv_hash.h  lru_cache.h  prependable_encoder.h  pretok.h  pretok_ucd.h  threadpool.h  tokenizer.h
c_bpe/python/c_bpe/: __init__.py  openai.py
c_bpe/src/: ac_bpe.c  appendable_encoder.c  bpe_core.c  interval_encoding.c  parallel.c  pretok_cl100k.c  pretok_o200k.c  pymodule.c  threadpool.c  tokenizer.c
c_bpe/tests/: test_basic.py  test_bpe_core.c  test_import.py
codegen/: gen_dict.py  gen_precomputed.c
include/: ac_bpe.h  c11_threads.h  interval_encoding.h  pretok.h  tokenizer.h
rust/: Cargo.toml  pyproject.toml
scripts/: compare_load_time.py  profile_cold_start.py  sync_version.py
src/: ac_bpe.c  ac_bpe_old.c  parallel.c  prependable_encoder.c  pretok_cl100k.c  pymodule.c  threadpool.c  tokenizer.c
tests/: README_benchmark.md  bench_results.md  bench_results_linux.md  bench_results_windows.md  conftest.py  test_ac_bpe.c  test_basic.py  test_benchmarks.py  test_import.py
