[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "c-bpe"
version = "0.1.0"
description = "High-performance C implementation of BPE tokenizer"
requires-python = ">=3.8"
license = {text = "MIT"}
readme = "README.md"
authors = [
    {name = "andrey-savov"}
]
keywords = [
    "byte-pair-encoding",
    "tokenization",
    "tokenizer",
    "bpe",
    "tiktoken",
    "tiktoken-alternative",
    "tiktoken-compatible",
    "nlp",
    "natural-language-processing",
    "llm",
    "large-language-models",
    "openai",
    "text-processing",
    "high-performance",
    "c",
    "cpython-extension",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/andrey-savov/c-bpe"
Repository = "https://github.com/andrey-savov/c-bpe"
Documentation = "https://github.com/andrey-savov/c-bpe#readme"
"Bug Tracker" = "https://github.com/andrey-savov/c-bpe/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-benchmark>=5.2.3",
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]
bench = [
    "numpy>=2.2.4",
    "matplotlib>=3.10.1",
    "tiktoken>=0.9.0",
]
rust = [
    "maturin>=1.8.3",
]

[tool.pytest.ini_options]
addopts = [
    "--benchmark-sort=mean",
    "--benchmark-columns=min,mean,stddev,median,iqr,ops,rounds",
    "--benchmark-warmup=on",
    "--benchmark-min-rounds=5",
    "--benchmark-timer=time.perf_counter",
]

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools.package-data]
c_bpe = ["*.bin", "*.bin.gz"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.ruff.isort]
known-first-party = ["c_bpe"]

[tool.pyright]
include = ["python"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
